unpackaged/main/default/objects/SBQQ__QuoteLineConsumptionSchedule__c/fields/SBQQ__BillingTermUnit__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__BillingTermUnit__c</fullName>
    <inlineHelpText>L&#39;unité utilisée dans les durées de facturation pour déterminer la fréquence de facturation.</inlineHelpText>
    <label>Billing Term Unit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
            <value>
                <fullName>Quarter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>