unpackaged/main/default/objects/SBQQ__QuoteLineConsumptionSchedule__c/fields/SBQQ__MatchingAttribute__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__MatchingAttribute__c</fullName>
    <inlineHelpText>L&#39;utilisation est comparée à une planification de consommation si les enregistrements partagent la même valeur Attribut de correspondance.</inlineHelpText>
    <label>Matching Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>