unpackaged/main/default/objects/SBQQ__QuoteLineConsumptionSchedule__c/fields/SBQQ__RatingMethod__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__RatingMethod__c</fullName>
    <inlineHelpText>Choisissez un cas d&#39;utilisation spécifique pour évaluer l&#39;utilisation par rapport à cette planification. Cette liste de sélection contrôle le champ Type.</inlineHelpText>
    <label>Rating Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>