unpackaged/main/default/objects/SBQQ__QuoteLineConsumptionSchedule__c/fields/SBQQ__Type__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Type__c</fullName>
    <inlineHelpText>Par plage : la planification calcule les prix uniquement en utilisant le niveau applicable à la quantité d&#39;utilisation. Par palier : l&#39;utilisation comprise dans les limites du palier reçoit une tarification égale à la valeur de son niveau</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Range</fullName>
            </value>
            <value>
                <fullName>Slab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>